--- a/index.html
+++ b/index.html
@@ -199,9 +199,10 @@
             </div>
           </div>
           <div class="span6 offset3 order">
+            <a class="coinbase-button" data-code="52d0b56b724233cbd4da66dbe8bbfdca" data-button-style="custom_small" href="https://coinbase.com/checkouts/52d0b56b724233cbd4da66dbe8bbfdca">Preorder with Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!--<button class="btn btn-success btn-large">Preorder</button>-->
           </div>
           <div class="span8 offset2 social">
             <!-- AddThis Button BEGIN -->
@@ -218,8 +219,8 @@
               <!-- AddThis Button END -->
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+            <!--<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>-->
           </div>
         </div>
       </div>
